--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   </li>
                   <li id="phone" class="hidden-xs">
                     <a href="tel:+919847877534">
-                      <span>+91 9847877534</span></a><div>* We Deliver</div>
+                      <span>+91 9847877534</span></a><div class="deliver">* We Deliver</div>
                   </li>
                 </ul>
               </div>
@@ -64,13 +64,13 @@
         </div>
     
         <div id="home-tiles" class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-6 col-xs-12" >
             <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
           </div>
-          <div class="col-md-4 col-sm-12 col-xs-12">
+          <div class="col-md-4 col-sm-12 col-xs-12" >
             <a href="hhttps://www.google.co.in/maps/place/Kozhikode,+Kerala/@11.255802,75.6707233,11z/data=!3m1!4b1!4m5!3m4!1s0x3ba65938563d4747:0x32150641ca32ecab!8m2!3d11.2587531!4d75.78041" target="_blank">
               <div id="map-tile">
                 <iframe src="https://www.google.co.in/maps/place/Kozhikode,+Kerala/@11.255802,75.6707233,11z/data=!3m1!4b1!4m5!3m4!1s0x3ba65938563d4747:0x32150641ca32ecab!8m2!3d11.2587531!4d75.78041" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
