--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
               <div class="navbar-header">
                 <a href="index.html" class="pull-left visible-md visible-lg">
-                  <div id="logo-img"><span class="imglo"><img src="img/avardslogo.jfif"></span></div>
+                  <div id="logo-img"><span class="imglo"><img src="img/logo.jfif"></span></div>
                 </a>
       
                 <div class="navbar-brand">
@@ -68,7 +68,7 @@
             <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+            <a href="special-manu.html"><div id="specials-tile"><span>specials</span></div></a>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12" >
             <a href="hhttps://www.google.co.in/maps/place/Kozhikode,+Kerala/@11.255802,75.6707233,11z/data=!3m1!4b1!4m5!3m4!1s0x3ba65938563d4747:0x32150641ca32ecab!8m2!3d11.2587531!4d75.78041" target="_blank">
@@ -118,3 +118,4 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   </body>
+  </html>
