--- a/menu-categories.html
+++ b/menu-categories.html
@@ -16,7 +16,7 @@
             <div class="container">
               <div class="navbar-header">
                 <a href="index.html" class="pull-left visible-md visible-lg">
-                  <div id="logo-img"><span class="imglo"><img src="img/avardslogo.jfif"></span></div>
+                  <div id="logo-img"><span class="imglo"><img src="img/logo.jfif"></span></div>
                 </a>
       
                 <div class="navbar-brand">
@@ -38,16 +38,16 @@
               <div id="collapsable-nav" class="collapse navbar-collapse">
                  <ul id="nav-list" class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="menu-categories.html">
-                      <span class="img"><img src="img/menu-logo-icon.jpg"></span><br class="hidden-xs">Menu</a>
+                    <a href="#">
+                      <span class="img"><img src="img/chicken 65.jpg"></span><br class="hidden-xs">Chicken</a>
                   </li>
                   <li>
                     <a href="#">
-                        <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs"> About</a>
+                        <span class="img"><img src="img/beef fry.jfif"></span><br class="hidden-xs">Beef</a>
                   </li>
                   <li>
                     <a href="#">
-                        <span class="img"><img src="img/avardslogo.jfif"></span></span><br class="hidden-xs"> Awards</a>
+                        <span class="img"><img src="img/fish fry2.jpg"></span></span><br class="hidden-xs">Sushi</a>
                   </li>
                   <li id="phone" class="hidden-xs">
                     <a href="tel:+919847877534">
@@ -106,3 +106,8 @@
           <div class="text-center">&copy; Copyright for every one</div>
         </div>
       </footer>
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+  </body>
+  </html>
