--- a/special-manu.html
+++ b/special-manu.html
@@ -104,7 +104,7 @@
             <div class="Login">
           
               <form>
-                <input type="button" onclick="window.location.href='file:///D:/assignment%205/contact.html'" value="Buy" />
+                <input type="button" onclick="window.location.href='contact.html'" value="Buy" />
         
                 </form>
           </div>
