--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       <span class="img"><img src="img/menu-logo-icon.jpg"></span><br class="hidden-xs">Menu</a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="https://jaseem1999.github.io/about-r/">
                         <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs"> About</a>
                   </li>
                   <li>
