--- a/menu-categories.html
+++ b/menu-categories.html
@@ -38,7 +38,7 @@
               <div id="collapsable-nav" class="collapse navbar-collapse">
                  <ul id="nav-list" class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="#">
+                    <a href="Chicken.html">
                       <span class="img"><img src="img/chicken 65.jpg"></span><br class="hidden-xs">Chicken</a>
                   </li>
                   <li>
