--- a/menu-categories.html
+++ b/menu-categories.html
@@ -61,7 +61,7 @@
       <div id="main-content" class="container">
       <div id="home-tiles" class="row">
         <div class="col-md-4 col-sm-6 col-xs-12" id="ch">
-          <a href="#"><div id="ch-tile"><span>Chicken</span></div></a>
+          <a href="Chicken.html"><div id="ch-tile"><span>Chicken</span></div></a>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="bf">
           <a href="#"><div id="bf-tile"><span>Beef</span></div></a>
