--- a/menu-categories.html
+++ b/menu-categories.html
@@ -42,7 +42,7 @@
                       <span class="img"><img src="img/chicken 65.jpg"></span><br class="hidden-xs">Chicken</a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="beef.html">
                         <span class="img"><img src="img/beef fry.jfif"></span><br class="hidden-xs">Beef</a>
                   </li>
                   <li>
@@ -64,7 +64,7 @@
           <a href="Chicken.html"><div id="ch-tile"><span>Chicken</span></div></a>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="bf">
-          <a href="#"><div id="bf-tile"><span>Beef</span></div></a>
+          <a href="beef.html"><div id="bf-tile"><span>Beef</span></div></a>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="sh">
             <a href=""><div id="sh-tile"><span>Sushi</span></div></a>
