--- a/menu-categories.html
+++ b/menu-categories.html
@@ -46,7 +46,7 @@
                         <span class="img"><img src="img/beef fry.jfif"></span><br class="hidden-xs">Beef</a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="sushi.html">
                         <span class="img"><img src="img/fish fry2.jpg"></span></span><br class="hidden-xs">Sushi</a>
                   </li>
                   <li id="phone" class="hidden-xs">
@@ -67,7 +67,7 @@
           <a href="beef.html"><div id="bf-tile"><span>Beef</span></div></a>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="sh">
-            <a href=""><div id="sh-tile"><span>Sushi</span></div></a>
+            <a href="sushi.html"><div id="sh-tile"><span>Sushi</span></div></a>
         </div>
     </div>
     </div>
