--- a/index.html
+++ b/index.html
@@ -33,21 +33,19 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-              </div>
-      
-              <div id="collapsable-nav" class="collapse navbar-collapse">
+              </div><div id="collapsable-nav" class="collapse navbar-collapse">
                  <ul id="nav-list" class="nav navbar-nav navbar-right">
                   <li>
                     <a href="menu-categories.html">
                       <span class="img"><img src="img/menu-logo-icon.jpg"></span><br class="hidden-xs">Menu</a>
                   </li>
                   <li>
-                    <a href="https://jaseem1999.github.io/about-r/">
+                    <a href="about.html">
                         <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs"> About</a>
                   </li>
                   <li>
-                    <a href="#">
-                        <span class="img"><img src="img/avardslogo.jfif"></span></span><br class="hidden-xs"> Awards</a>
+                    <a href="special-manu.html">
+                        <span class="img"><img src="img/mattan beriyani.jpg"></span></span><br class="hidden-xs"> special</a>
                   </li>
                   <li id="phone" class="hidden-xs">
                     <a href="tel:+919847877534">
@@ -70,10 +68,10 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="special-manu.html"><div id="specials-tile"><span>specials</span></div></a>
           </div>
-          <div class="col-md-4 col-sm-12 col-xs-12" >
+        <div class="col-md-4 col-sm-12 col-xs-12" >
             <a href="hhttps://www.google.co.in/maps/place/Kozhikode,+Kerala/@11.255802,75.6707233,11z/data=!3m1!4b1!4m5!3m4!1s0x3ba65938563d4747:0x32150641ca32ecab!8m2!3d11.2587531!4d75.78041" target="_blank">
               <div id="map-tile">
-                <iframe src="https://www.google.co.in/maps/place/Kozhikode,+Kerala/@11.255802,75.6707233,11z/data=!3m1!4b1!4m5!3m4!1s0x3ba65938563d4747:0x32150641ca32ecab!8m2!3d11.2587531!4d75.78041" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2404.2856760798786!2d75.96786185022872!3d11.285016799440532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba6438cd7742287%3A0x292e210b16a25da3!2sChittaaripilakkal%2C%20Kerala!5e0!3m2!1sen!2sin!4v1605066700890!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <span>map</span>
               </div>
     
