--- a/Chicken.html
+++ b/Chicken.html
@@ -32,19 +32,19 @@
                 </button>
               </div>
       
-              <div id="collapsable-nav" class="collapse navbar-collapse">
+             <div id="collapsable-nav" class="collapse navbar-collapse">
                  <ul id="nav-list" class="nav navbar-nav navbar-right">
                   <li>
                     <a href="menu-categories.html">
                       <span class="img"><img src="img/menu-logo-icon.jpg"></span><br class="hidden-xs">Menu</a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="about.html">
                         <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs"> About</a>
                   </li>
                   <li>
-                    <a href="#">
-                        <span class="img"><img src="img/avardslogo.jfif"></span></span><br class="hidden-xs"> Awards</a>
+                    <a href="special-manu.html">
+                        <span class="img"><img src="img/mattan beriyani.jpg"></span></span><br class="hidden-xs"> Special</a>
                   </li>
                   <li id="phone" class="hidden-xs">
                     <a href="tel:+919847877534">
