--- a/special-manu.html
+++ b/special-manu.html
@@ -41,8 +41,8 @@
                     <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs">Home</a>
               </li>
               <li>
-                <a href="#">
-                    <span class="img"><img src="img/avardslogo.jfif"></span></span><br class="hidden-xs"> Awards</a>
+                <a href="special-manu.html">
+                    <span class="img"><img src="img/mattan beriyani.jpg"></span></span><br class="hidden-xs"> special</a>
               </li>
               <li id="phone" class="hidden-xs">
                 <a href="tel:+919847877534">
