--- a/sushi.html
+++ b/sushi.html
@@ -32,19 +32,19 @@
                 </button>
               </div>
       
-              <div id="collapsable-nav" class="collapse navbar-collapse">
+               <div id="collapsable-nav" class="collapse navbar-collapse">
                  <ul id="nav-list" class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="menu-categories.html">
-                      <span class="img"><img src="img/menu-logo-icon.jpg"></span><br class="hidden-xs">Menu</a>
+                    <a href="Chicken.html">
+                      <span class="img"><img src="img/chicken 65.jpg"></span><br class="hidden-xs">Chicken</a>
                   </li>
                   <li>
-                    <a href="#">
-                        <span class="img"><img src="img/aboutlogo.jfif"></span><br class="hidden-xs"> About</a>
+                    <a href="beef.html">
+                        <span class="img"><img src="img/beef fry.jfif"></span><br class="hidden-xs"> beef</a>
                   </li>
                   <li>
-                    <a href="#">
-                        <span class="img"><img src="img/avardslogo.jfif"></span></span><br class="hidden-xs"> Awards</a>
+                    <a href="special-manu.html">
+                        <span class="img"><img src="img/mattan beriyani.jpg"></span></span><br class="hidden-xs"> special</a>
                   </li>
                   <li id="phone" class="hidden-xs">
                     <a href="tel:+919847877534">
